--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+$body-bg: rgb(243, 243, 243);
+$theme-colors: (
+  "primary": rgb(63, 63, 63)
+);
+
+@import "../node_modules/bootstrap/scss/bootstrap";
