--- a/src/app/features/math/components/game/game.component.html
+++ b/src/app/features/math/components/game/game.component.html
@@ -25,7 +25,7 @@
            value="Next Question">
     <input type="button"
            *ngIf="(atEnd$ | async)"
-           (click)="next(guess)"
+           (click)="finish(guess)"
            class="btn btn-success"
            value="Finish Game">
   </div>
