added saved scores feature and api

--- a/src/app/features/math/components/score-list/score-list.component.html
+++ b/src/app/features/math/components/score-list/score-list.component.html
@@ -16,7 +16,7 @@
         <h4>Correct!</h4>
       </span>
       <span *ngIf="score.incorrect">
-        <h4>Opps, Inorrect Answer!</h4>
+        <h4>Opps, Incorrect Answer!</h4>
       </span>
       <p>Question {{ score.num }} was
         <b>{{ score.question }} = {{ score.answer }}.</b>
