--- a/src/app/features/math/math.component.html
+++ b/src/app/features/math/math.component.html
@@ -2,11 +2,16 @@
   <div class="col-2">
     <nav class="nav flex-column">
       <a class="nav-link"
+         [hidden]="(hidesGame$ | async)"
          [routerLinkActive]="['active']"
          [routerLink]="['game']">Game</a>
       <a class="nav-link"
+         [hidden]="(hidesScores$ | async)"
          [routerLinkActive]="['active']"
          [routerLink]="['scores']">Scores</a>
+      <a class="nav-link"
+         [routerLinkActive]="['active']"
+         [routerLink]="['saved-scores']">Saved Scores</a>
     </nav>
   </div>
   <div class="col">
