added admin M C and lazy loading ex

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -9,6 +9,10 @@
       <a class="nav-link"
          [routerLink]="['math']"
          [routerLinkActive]="['active']">Math Game</a>
+    <li class="nav-item">
+      <a class="nav-link"
+         [routerLink]="['admin']"
+         [routerLinkActive]="['active']">Admin</a>
     </li>
   </ul>
 </nav>
